# libdecomp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  version.h.in
examples/decomp-cli/: main.c
examples/expr_test/: main.c
examples/memory_fmt/: main.c
examples/simple/: main.c
examples/simple_capstone/: main.c
examples/simple_capstone_arm64/: main.c
include/libdecomp/: backend.h  formatter.h  libdecomp.h
include/libdecomp/backend/: capstone.h  zydis.h
include/libdecomp/formatter/: lang_c.h  lang_expr.h  lang_py.h  lang_zig.h
libdecomp/: decompiler.c  dynarr.c  dynarr.h  formatter.c  program.c  version.c  visitor.c  visitor.h
libdecomp/formatter/: lang_c.c  lang_expr.c  lang_py.c  lang_zig.c
libdecomp/native/: basic_block.c  basic_block.h
